# allegro_tiled

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.mkd  project.vip
cmake/: Utils.cmake
data/maps/: level1.tmx
example/: CMakeLists.txt  Makefile
example/ex1/: Makefile  ex1  tags  valgrind.txt
example/ex1/data/maps/: level1.tmx
example/ex1/data/tilesets/xcf/: bricks.xcf
example/ex1/src/: main.c
example/ex2/: Makefile  tags
example/ex2/data/maps/: level1.tmx
example/ex2/data/tilesets/xcf/: backgrounds.xcf
example/ex2/src/: .main.c.swp  main.c
example/mario/: Makefile
example/mario/src/: mario.c
example/src/: main.c
include/allegro5/: allegro_tiled.h  tiled.h
misc/: allegro_tiled-5.0.pc  allegro_tiled-5.pc.in  liballegro_tiled-5.0.pc
src/: api.c  api.h  data.c  data.h  draw.c  draw.h  global.c  global.h  internal.h  list.c  list.h  main.c  map-data-decompresser.c  map-data-decompresser.h  map-parser.c  map-parser.h  map.c  map.h  parser.c  parser.h  util.c  util.h  xml.c  xml.h  zlib.c  zlib.h  zpipe.c  zpipe.h
